--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://api.fontshare.com/v2/css?f[]=satoshi@400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="img/logo-zupa.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -20,6 +22,7 @@
       <li><a href="#">FAQ</a></li>
       <li><a href="#">Contactos</a></li>
     </ul>
+    <i class="fa-solid fa-bars" style="color: #f2f2f2;"></i>
   </nav>
 </header>
     <section id="main" class="main">
@@ -35,6 +38,28 @@
         <div class="img-credit">
             <img src="img/credit-card.svg" alt="" srcset="">
         </div>
+    </section>
+
+    <section id="our-service" class="our-service">
+            <h2 class="txt-title">Nossos Serviços</h2>
+            <div class="cards">
+                <div class="card-service">
+                    <h4>Gestão de Redes sociais</h4>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia unde soluta provident quibusdam omnis accusamus error dolorum, autem sunt ipsa dignissimos accusantium laborum deleniti expedita qui, eligendi veritatis iste tempora!</p>
+                </div>
+                <div class="card-service">
+                    <h4>Gestão de Redes sociais</h4>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia unde soluta provident quibusdam omnis accusamus error dolorum, autem sunt ipsa dignissimos accusantium laborum deleniti expedita qui, eligendi veritatis iste tempora!</p>
+                </div>
+                <div class="card-service">
+                    <h4>Gestão de Redes sociais</h4>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia unde soluta provident quibusdam omnis accusamus error dolorum, autem sunt ipsa dignissimos accusantium laborum deleniti expedita qui, eligendi veritatis iste tempora!</p>
+                </div>
+                <div class="card-service">
+                    <h4>Gestão de Redes sociais</h4>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia unde soluta provident quibusdam omnis accusamus error dolorum, autem sunt ipsa dignissimos accusantium laborum deleniti expedita qui, eligendi veritatis iste tempora!</p>
+                </div>
+            </div>
     </section>
 </body>
 </html>
