--- a/index.html
+++ b/index.html
@@ -59,6 +59,18 @@
                     <h4>Gestão de Redes sociais</h4>
                     <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia unde soluta provident quibusdam omnis accusamus error dolorum, autem sunt ipsa dignissimos accusantium laborum deleniti expedita qui, eligendi veritatis iste tempora!</p>
                 </div>
+                <div class="card-service">
+                    <h4>Gestão de Redes sociais</h4>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia unde soluta provident quibusdam omnis accusamus error dolorum, autem sunt ipsa dignissimos accusantium laborum deleniti expedita qui, eligendi veritatis iste tempora!</p>
+                </div>
+                <div class="card-service">
+                    <h4>Gestão de Redes sociais</h4>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia unde soluta provident quibusdam omnis accusamus error dolorum, autem sunt ipsa dignissimos accusantium laborum deleniti expedita qui, eligendi veritatis iste tempora!</p>
+                </div>
+                <div class="card-service">
+                    <h4>Gestão de Redes sociais</h4>
+                    <p class="description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Mollitia unde soluta provident quibusdam omnis accusamus error dolorum, autem sunt ipsa dignissimos accusantium laborum deleniti expedita qui, eligendi veritatis iste tempora!</p>
+                </div>
             </div>
     </section>
 </body>
