--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <nav>
     <ul class="nav-links">
       <li><a href="#main">Home</a></li>
-      <li><a href="#">Serviços</a></li>
-      <li><a href="#">Depoimentos</a></li>
+      <li><a href="#our-service">Serviços</a></li>
+      <!-- <li><a href="#">Depoimentos</a></li> -->
+       <li><a href="#">Destaques</a></li>
       <li><a href="#">FAQ</a></li>
       <li><a href="#">Contactos</a></li>
     </ul>
@@ -73,5 +74,7 @@
                 </div>
             </div>
     </section>
+
+
 </body>
 </html>
